src/test/ui-fulldeps/proc-macro/three-equals.stderr
error: found 2 equal signs, need exactly 3
  --> $DIR/three-equals.rs:25:5
   |
25 |     three_equals!(==);
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: input must be: `===`

error: expected EOF, found `=`.
  --> $DIR/three-equals.rs:28:21
   |
28 |     three_equals!(=====);
   |                     ^^
   |
note: last good input was here
  --> $DIR/three-equals.rs:28:21
   |
28 |     three_equals!(=====);
   |                     ^^
   = help: input must be: `===`

error: expected `=`, found `abc`.
  --> $DIR/three-equals.rs:31:19
   |
31 |     three_equals!(abc);
   |                   ^^^

error: expected `=`, found `!`.
  --> $DIR/three-equals.rs:34:19
   |
34 |     three_equals!(!!);
   |                   ^

error: expected EOF, found `a`.
  --> $DIR/three-equals.rs:37:22
   |
37 |     three_equals!(===a);
   |                      ^
   |
note: last good input was here
  --> $DIR/three-equals.rs:37:21
   |
37 |     three_equals!(===a);
   |                     ^
   = help: input must be: `===`

error: aborting due to 5 previous errors

